// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfirmDeleteModal > Snapshots > should match snapshot in default state 1`] = `
<div
  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4"
>
  <div
    class="bg-white rounded-lg max-w-md w-full"
  >
    <div
      class="flex items-center justify-between p-6 border-b"
    >
      <div
        class="flex items-center space-x-3"
      >
        <div
          class="flex-shrink-0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-triangle-alert h-6 w-6 text-red-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
        <h2
          class="text-lg font-semibold text-gray-900"
        >
          Delete Item
        </h2>
      </div>
      <button
        class="text-gray-400 hover:text-gray-600"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <p
        class="text-sm text-gray-600 mb-4"
      >
        Are you sure you want to delete this item?
      </p>
      <div
        class="bg-gray-50 rounded-lg p-3 mb-4"
      >
        <p
          class="text-sm font-medium text-gray-900"
        >
          Test Item
        </p>
      </div>
      <p
        class="text-sm text-red-600"
      >
        This action cannot be undone.
      </p>
    </div>
    <div
      class="flex items-center justify-end space-x-3 p-6 border-t bg-gray-50 rounded-b-lg"
    >
      <button
        class="btn-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="bg-red-600 text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`ConfirmDeleteModal > Snapshots > should match snapshot in loading state 1`] = `
<div
  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4"
>
  <div
    class="bg-white rounded-lg max-w-md w-full"
  >
    <div
      class="flex items-center justify-between p-6 border-b"
    >
      <div
        class="flex items-center space-x-3"
      >
        <div
          class="flex-shrink-0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-triangle-alert h-6 w-6 text-red-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
        <h2
          class="text-lg font-semibold text-gray-900"
        >
          Delete Item
        </h2>
      </div>
      <button
        class="text-gray-400 hover:text-gray-600"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <p
        class="text-sm text-gray-600 mb-4"
      >
        Are you sure you want to delete this item?
      </p>
      <div
        class="bg-gray-50 rounded-lg p-3 mb-4"
      >
        <p
          class="text-sm font-medium text-gray-900"
        >
          Test Item
        </p>
      </div>
      <p
        class="text-sm text-red-600"
      >
        This action cannot be undone.
      </p>
    </div>
    <div
      class="flex items-center justify-end space-x-3 p-6 border-t bg-gray-50 rounded-b-lg"
    >
      <button
        class="btn-secondary"
        disabled=""
        type="button"
      >
        Cancel
      </button>
      <button
        class="bg-red-600 text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="animate-spin rounded-full h-4 w-4 border-b-2 border-white"
          />
          <span>
            Deleting...
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ConfirmDeleteModal > Snapshots > should match snapshot without itemName 1`] = `
<div
  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4"
>
  <div
    class="bg-white rounded-lg max-w-md w-full"
  >
    <div
      class="flex items-center justify-between p-6 border-b"
    >
      <div
        class="flex items-center space-x-3"
      >
        <div
          class="flex-shrink-0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-triangle-alert h-6 w-6 text-red-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
        <h2
          class="text-lg font-semibold text-gray-900"
        >
          Delete Item
        </h2>
      </div>
      <button
        class="text-gray-400 hover:text-gray-600"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <p
        class="text-sm text-gray-600 mb-4"
      >
        Are you sure you want to delete this item?
      </p>
      <p
        class="text-sm text-red-600"
      >
        This action cannot be undone.
      </p>
    </div>
    <div
      class="flex items-center justify-end space-x-3 p-6 border-t bg-gray-50 rounded-b-lg"
    >
      <button
        class="btn-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="bg-red-600 text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;
